fixed error in gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -226,6 +226,6 @@ $RECYCLE.BIN/
 # Custom directories and files
 ./.idea/
 *.iml
-./.idea/misc.xml
-./.idea/modules.xml
-./.idea/vcs.xml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/vcs.xml
