improved check which operating system is used

--- a/.gitignore
+++ b/.gitignore
@@ -232,3 +232,5 @@ $RECYCLE.BIN/
 /azure.json
 /aws.json
 /.vscode/
+/fingerprinter/cloudproviderdetection/aws.json
+/fingerprinter/cloudproviderdetection/azure.json
